--- a/dapp/src/components/StakingUnstakingCard/styles.scss
+++ b/dapp/src/components/StakingUnstakingCard/styles.scss
@@ -2,10 +2,8 @@
 
 .advanced-balance-card-holder {
     border: 1px solid rgba(102, 141, 198, 0.4);
-    mix-blend-mode: normal;
     box-sizing: border-box;
     box-shadow: 0px 3.58957px 13.4609px rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(36px);
     border-radius: 22px;
 
     .advanced-balance-card {
@@ -25,7 +23,6 @@
         justify-content: center;
         background: rgba(99, 114, 136, 0.2);
         mix-blend-mode: normal;
-        backdrop-filter: blur(50px);
         border-radius: 13px;
 
         @media (max-width: $medium-screen-size) {
