--- a/dapp/src/components/ZAssets/PrivateZAssetsTable/RedeemReward/styles.scss
+++ b/dapp/src/components/ZAssets/PrivateZAssetsTable/RedeemReward/styles.scss
@@ -29,5 +29,4 @@
 .locked-button {
     background: rgba(164, 183, 219, 0.1) !important;
     box-shadow: 0px 3px 13px rgba(0, 0, 0, 0.15) !important;
-    backdrop-filter: blur(36px) !important;
 }
